Russian HowTos translation

--- a/ru/howtos/priorview.html
+++ b/ru/howtos/priorview.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - The "Priorview" preview utility - OmegaT</title>
+  <title>Инструмент предварительного просмотра "Priorview" - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -42,7 +42,7 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - The "Priorview" preview utility - OmegaT" />
+  <meta property="og:title"       content="Инструмент предварительного просмотра "Priorview" - OmegaT" />
   <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/priorview" />
   <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
@@ -55,7 +55,7 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Howto - The "Priorview" preview utility",
+    "headline": "Инструмент предварительного просмотра "Priorview"",
     "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
@@ -169,9 +169,9 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Howto - The "Priorview" preview utility</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Инструмент предварительного просмотра "Priorview"</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div>
+    
 <div class="container">
 
 
