--- a/ru/howtos/text_export.html
+++ b/ru/howtos/text_export.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Using the OmegaT text export function (scripting interface) - OmegaT</title>
+  <title>Использование функции экспорта текста в OmegaT (интерфейс для скриптов) - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -42,7 +42,7 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Using the OmegaT text export function (scripting interface) - OmegaT" />
+  <meta property="og:title"       content="Использование функции экспорта текста в OmegaT (интерфейс для скриптов) - OmegaT" />
   <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/text_export" />
   <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
@@ -55,7 +55,7 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Howto - Using the OmegaT text export function (scripting interface)",
+    "headline": "Использование функции экспорта текста в OmegaT (интерфейс для скриптов)",
     "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
@@ -169,9 +169,9 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-text_export"><h1>Howto - Using the OmegaT text export function (scripting interface)</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-text_export"><h1>Использование функции экспорта текста в OmegaT (интерфейс для скриптов)</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div>
+    
 <div class="container">
 
 <p>Since version 2.0.1, OmegaT has had a text export function. This HOWTO describes the function and possible uses for it. In addition, the package <a href="/files/omegatk/te-scripts.zip">te-scripts.zip</a> contains some very simple tcl/tk scripts which are intended to illustrate use of the function.</p>
@@ -190,15 +190,15 @@
 
 <p>For the text export function to be used, you must first enable it within OmegaT itself:</p>
 
-<p>Options > Editing behaviour</p>
+<p>Options &gt; Editing behaviour</p>
 
 <p>Then tick the "Export the segment to text files" box.</p>
 
-<p>The files appear in the /script subfolder in the OmegaT user files folder (for the location of the OmegaT user files folder on your operating system, see the User Manual (F1 from within OmegaT) > Files and directories > User files):</p>
+<p>The files appear in the /script subfolder in the OmegaT user files folder (for the location of the OmegaT user files folder on your operating system, see the User Manual (F1 from within OmegaT) &gt; Files and directories &gt; User files):</p>
 
 <p>source.txt	- contains the source text of the segment<br/>
 target.txt	- contains the target text of the segment<br/>
-selection.txt	- contains the text highlighted by the user, when Ctrl-Shift-C is pressed or Edit > Export Selection is selected</p>
+selection.txt	- contains the text highlighted by the user, when Ctrl-Shift-C is pressed or Edit &gt; Export Selection is selected</p>
 
 <p>The content of the files is overwritten either when a new segment is opened (source.txt and target.txt) or when a new selection is exported (selection.txt). The files are unformatted plain-text files.</p>
 
@@ -281,7 +281,7 @@ selection.txt	- contains the text highlighted by the user, when Ctrl-Shift-C is 
 
 <p>If you are serious about learning tcl/tk, "Practical Programming in Tcl and Tk" by Brent Welch, ISBN: 0-13-038560-3 is strongly recommended. This is likely to be a little too technical for complete newcomers to programming, but after working through one of the online tutorials, they should find it useful.</p>
 
-<p>Copyright Marc Prior 2009-2011</p>
+<p>Copyright Марк Прайор 2009–2011</p>
 
 </div>
 
