--- a/ru/howtos/tokenizer.html
+++ b/ru/howtos/tokenizer.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Using the OmegaT tokenizer - OmegaT</title>
+  <title>Использование модуля токенизации в OmegaT - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -42,7 +42,7 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Using the OmegaT tokenizer - OmegaT" />
+  <meta property="og:title"       content="Использование модуля токенизации в OmegaT - OmegaT" />
   <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/tokenizer" />
   <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
@@ -55,7 +55,7 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Howto - Using the OmegaT tokenizer",
+    "headline": "Использование модуля токенизации в OmegaT",
     "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
@@ -169,9 +169,9 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-tokenizer"><h1>Howto - Using the OmegaT tokenizer</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-tokenizer"><h1>Использование модуля токенизации в OmegaT</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div><div class="container">
+    <div class="container">
 
 
 <p><strong>The tokenizer plug-in was integrated into OmegaT in version 3.0.0. The following information is therefore applicable only if you are using a version of OmegaT earlier than 3.0.0.<br/>
@@ -210,7 +210,7 @@ If you have been using the tokenizer plug-in with an earlier version of OmegaT a
 
 <p>3. In the main OmegaT program folder (i.e. the folder containing the file OmegaT.jar), create a sub-folder called "plugins", if a sub-folder with this name does not already exist. Copy the files that you have unzipped from the tokenizer package directly into this sub-folder.</p>
 
-<p>4. Open your launch script file in a text editor. Windows users (in particular): do <strong>not</strong> simply click on this file. Instead, launch a text editor (such as Notepad or Wordpad), then open the launch script file with File > Open. You may also be able to right-click with the mouse on the file, then select a text editor in which to open it.</p>
+<p>4. Open your launch script file in a text editor. Windows users (in particular): do <strong>not</strong> simply click on this file. Instead, launch a text editor (such as Notepad or Wordpad), then open the launch script file with File &gt; Open. You may also be able to right-click with the mouse on the file, then select a text editor in which to open it.</p>
 
 <p>5. The launch file script contains the OmegaT launch command. The basic form of this command is:</p>
 
