--- a/ru/howtos/export_uncleaned_rtf.html
+++ b/ru/howtos/export_uncleaned_rtf.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Exporting from OmegaT to 'Trados uncleaned RTF' format - OmegaT</title>
+  <title>Экспорт из OmegaT в формат «Неочищенный RTF Trados» - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -42,7 +42,7 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Exporting from OmegaT to 'Trados uncleaned RTF' format - OmegaT" />
+  <meta property="og:title"       content="Экспорт из OmegaT в формат «Неочищенный RTF Trados» - OmegaT" />
   <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/export_uncleaned_rtf" />
   <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
@@ -55,7 +55,7 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Howto - Exporting from OmegaT to 'Trados uncleaned RTF' format",
+    "headline": "Экспорт из OmegaT в формат «Неочищенный RTF Trados»",
     "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
@@ -169,96 +169,90 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-export_uncleaned_rtf"><h1>Howto - Exporting from OmegaT to 'Trados uncleaned RTF' format</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-export_uncleaned_rtf"><h1>Экспорт из OmegaT в формат «Неочищенный RTF Trados»</h1></div>
         
     <div class="container">
-
-<h2>OmegaT HowTo: <br/>Экспорт из OmegaT в формат «Trados uncleaned RTF»</h2>
-
-<p>В данном руководстве описывается получение из проекта OmegaT файла в формате «uncleaned RTF». Этот формат часто используется для обмена переводами между пользователями различных систем автоматизированного перевода, в особенности Trados и Wordfast Classic</p> 
-
-<p>Обратите внимание:</p>
-<p>Этот код ещё недостаточно оттестирован (хотя первоначальные результаты весьма многообещающие).</p>
-<p>Скрипт работает только на Windows.</p>
-<p>С его помощью можно создавать «uncleaned»-файлы Trados. Он не позволяет «переводить» выданные заказчиком двуязычные файлы.</p>
-
-<p><strong>1. Добавление разделителей сегментов Trados</strong></p>
-
-<p>Для создания двуязычного файла OpenOffice.org, содержащего разделители сегментов Trados, закройте проект OmegaT и запустите для файла «project_save.tmx» следующий AutoIt-скрипт (для работы необходима Windows):</p>
-
-<a href="http://www.leuce.com/tempfile/omtautoit/uncleanifyTMX.zip">http://www.leuce.com/tempfile/omtautoit/uncleanifyTMX.zip</a>
-<p><strong>2. Создание переведённых документов</strong></p>
-
-<p>Создайте переведённые документы и сконвертируйте их в файлы Microsoft Word.</p>
-
-<p><strong>3. Применение стилей к разделителям</strong></p>
-
-<p>Для применения соответствующих стилей к переведённым документам, в Microsoft Word запустите следующий макрос:</p>
-
-<p>Private Sub AddTw4winStyles()<br/>
+  <p>В данном руководстве описывается получение из проекта OmegaT файла в формате «неочищенный RTF». Этот формат часто используется для обмена переводами между пользователями различных систем автоматизированного перевода, в особенности Trados и Wordfast Classic.</p>
+  <p>Обратите внимание:</p>
+  <p>Этот код ещё недостаточно протестирован (хотя первоначальные результаты весьма многообещающие).</p>
+  <p>Скрипт работает только в Windows.</p>
+  <p>С его помощью можно создавать «неочищенные» файлы Trados. Он не позволяет «переводить» выданные заказчиком двуязычные файлы.</p>
+  <p>
+    <strong>1. Добавление разделителей сегментов Trados</strong>
+  </p>
+  <p>Для создания двуязычного файла OpenOffice.org, содержащего разделители сегментов Trados, закройте проект OmegaT и запустите для файла «project_save.tmx» следующий AutoIt-скрипт (для работы необходима Windows):</p>
+  <p>
+    <a href="http://www.leuce.com/autoit/uncleanifyTMX.zip">www.leuce.com/autoit/uncleanifyTMX.zip</a>
+  </p>
+  <p>
+    <strong>2. Создание переведённых документов</strong>
+  </p>
+  <p>Создайте переведённые документы и сконвертируйте их в файлы Microsoft Word.</p>
+  <p>
+    <strong>3. Применение стилей к разделителям</strong>
+  </p>
+  <p>Для применения соответствующих стилей к переведённым документам, в Microsoft Word запустите следующий макрос:</p>
+  <p>Private Sub AddTw4winStyles()<br/>
 
 On Error Resume Next<br/>
 
 Dim sMark, sInt, sExt As Style<br/>
 
-Set sMark = ActiveDocument.Styles.Add(Name:=&quot;tw4winMark&quot;, _<br/>
+Set sMark = ActiveDocument.Styles.Add(Name:="tw4winMark", _<br/>
 
-    Type:=wdStyleTypeCharacter)<br/>
+&nbsp;&nbsp;&nbsp; Type:=wdStyleTypeCharacter)<br/>
 
 With sMark.Font<br/>
 
-  .Name = &quot;Courier&quot;<br/>
+&nbsp; .Name = "Courier"<br/>
 
-  .Size = 11<br/>
+&nbsp; .Size = 11<br/>
 
-  .Hidden = True<br/>
+&nbsp; .Hidden = True<br/>
 
-  .Subscript = True<br/>
+&nbsp; .Subscript = True<br/>
 
-  .ColorIndex = wdViolet<br/>
+&nbsp; .ColorIndex = wdViolet<br/>
 
 End With<br/>
 
-Set sInt = ActiveDocument.Styles.Add(Name:=&quot;tw4winInternal&quot;, _<br/>
+Set sInt = ActiveDocument.Styles.Add(Name:="tw4winInternal", _<br/>
 
-    Type:=wdStyleTypeCharacter)<br/>
+&nbsp;&nbsp;&nbsp; Type:=wdStyleTypeCharacter)<br/>
 
 sInt.LanguageID = wdNoProofing<br/>
 
 With sInt.Font<br/>
 
-  .Name = &quot;Courier&quot;<br/>
+&nbsp; .Name = "Courier"<br/>
 
-  .Size = 11<br/>
+&nbsp; .Size = 11<br/>
 
-  .ColorIndex = wdRed<br/>
+&nbsp; .ColorIndex = wdRed<br/>
 
 End With<br/>
 
-Set sExt = ActiveDocument.Styles.Add(Name:=&quot;tw4winExternal&quot;, _<br/>
+Set sExt = ActiveDocument.Styles.Add(Name:="tw4winExternal", _<br/>
 
-    Type:=wdStyleTypeCharacter)<br/>
+&nbsp;&nbsp;&nbsp; Type:=wdStyleTypeCharacter)<br/>
 
 sExt.LanguageID = wdNoProofing<br/>
 
 With sExt.Font<br/>
 
-  .Name = &quot;Courier&quot;<br/>
+&nbsp; .Name = "Courier"<br/>
 
-  .Size = 11<br/>
+&nbsp; .Size = 11<br/>
 
-  .ColorIndex = wdGray50<br/>
+&nbsp; .ColorIndex = wdGray50<br/>
 
 End With<br/>
 
 End Sub<br/>
 
 </p>
-
-<p>Copyright Марк Прайор 2009-2011</p>
-
+  <p>Copyright Марк Прайор 2009–2011</p>
 </div>
-
 
 
 
