--- a/ru/howtos/preview.html
+++ b/ru/howtos/preview.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Adding a preview function to OmegaT - OmegaT</title>
+  <title>Добавление функции предварительного просмотра в OmegaT - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -42,7 +42,7 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Adding a preview function to OmegaT - OmegaT" />
+  <meta property="og:title"       content="Добавление функции предварительного просмотра в OmegaT - OmegaT" />
   <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/preview" />
   <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
@@ -55,7 +55,7 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Howto - Adding a preview function to OmegaT",
+    "headline": "Добавление функции предварительного просмотра в OmegaT",
     "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
@@ -169,32 +169,32 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-preview"><h1>Howto - Adding a preview function to OmegaT</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-preview"><h1>Добавление функции предварительного просмотра в OmegaT</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div>
+    
 <div class="container">
 
 
-<h3>Background</h3>
+<h3>Фон</h3>
 
 <p>Most modern CAT tools display the text in segment-oriented form rather than with its ultimate layout and formatting. Although this has many advantages, it can be very useful for the translator to be able to see the ultimate layout and formatting whilst translating. For this reason, many CAT tools provide a preview function that shows the layout and formatting without the translator having to create the final document and open it in a separate application (usually a word processor). OmegaT does not have an integral preview function, but it is possible to provide much the same functionality using additional software. This HowTo describes the general principles for setting up a preview function.</p>
 
-<h3>Principles</h3>
+<h3>Принципы</h3>
 
-<p>Ideally, a viewer should do two things:</p>
+<p>В идеале у функции предварительного просмотра должно быть две характеристики:</p>
 
 <ul>
 
-<li>It should display the text with something approaching the final layout and formatting.</li>
+<li>отображение текста в виде, близком к окончательному варианту (форматирование и макет);</li>
 
-<li>It should be updated continually.</li>
+<li>постоянное обновление.</li>
 
 </ul>
 
 
-<h3>Browser</h3>
+<h3>Обозреватель</h3>
 
-<p>If you are translating .html files, a convenient solution is to use a browser with an automatic refresh function to provide a ready-made preview function. Examples of browsers with an automatic refresh function:</p>
+<p>Если в работе находятся файлы .html, то для предварительного просмотра очень удобно пользоваться программой-обозревателем с автоматическим обновлением. Examples of browsers with an automatic refresh function:</p>
 
 <ul>
 
@@ -205,7 +205,7 @@ Windows users who are not already using Firefox can <a href="http://www.mozilla.
 Opera is available for all platforms; it is also very fast and requires low hardware resources. <a href="http://www.opera.com">Download it from www.opera.com</a> (or for Linux users: through your distribution's repository). The automatic refresh function is built in.</li>
 
 <li>Chrome:<br/>
-Chrome is also available for all platforms. <a href="https://www.google.com/chrome/browser/desktop/index.html">Download Chrome from www.google.com/chrome</a>. To add the auto refresh function to Chrome, <a href="https://chrome.google.com/webstore/detail/easy-auto-refresh/aabcgdmkeabbnleenpncegpcngjpnjkc">download and install the Auto Refresh Plus extension</a> from the Web Store. </li>
+Chrome is also available for all platforms. <a href="https://www.google.com/chrome/browser/desktop/index.html">Download Chrome from www.google.com/chrome</a>. To add the auto refresh function to Chrome, <a href="https://chrome.google.com/webstore/detail/easy-auto-refresh/aabcgdmkeabbnleenpncegpcngjpnjkc">download and install the Auto Refresh Plus extension</a> from the Web Store.  </li>
 
 </ul>
 
@@ -215,12 +215,12 @@ Chrome is also available for all platforms. <a href="https://www.google.com/chro
 
 <ul>
 
-<li>Using Firefox: with File > Open File</li>
-<li>Using Opera: with Opera > Page > Open</li>
+<li>Using Firefox: with File &gt; Open File</li>
+<li>Using Opera: with Opera &gt; Page &gt; Open</li>
 
 </ul>
 
-<p>Now enable automatic refreshing. In both Firefox and Opera, this can be done by right-clicking in the translated .html file you have opened, then Reload every > select a desired interval (e.g. 5 seconds).</p>
+<p>Now enable automatic refreshing. In both Firefox and Opera, this can be done by right-clicking in the translated .html file you have opened, then Reload every &gt; select a desired interval (e.g. 5 seconds).</p>
 
 <p>You now have a preview function. To update the display, you must still save and create your target document in OmegaT with Ctrl+s, Ctrl+d. The change will then become visible after a delay of at most the interval you selected (plus the time taken by OmegaT to save and produce the target files). Your browser won't automatically scroll as you work through the text; you have to do that yourself. But it will at least stay at the same point in the text when the view is updated.</p>
 
