--- a/cz/about.html
+++ b/cz/about.html
@@ -232,9 +232,9 @@
 
     <tr>
 
-      <td>Jean-Christophe Helary</td>
+      <td>Kos Ivantsov</td>
 
-      <td>Správce lokalizace, vlastník uživatelské skupiny</td>
+      <td>Správce lokalizace</td>
 
     </tr>
 
