--- a/de/about.html
+++ b/de/about.html
@@ -208,8 +208,8 @@ Translation-Memory-Software.</p>
 <td>Dokumentationsmanager</td>
 </tr>
 <tr>
-<td>Jean-Christophe Helary</td>
-<td>Lokalisierungsmanager, Inhaber der Anwendergruppe</td>
+<td>Kos Ivantsov</td>
+<td>Lokalisierungsmanager</td>
 </tr>
 <tr>
 <td>Entwickler</td>
