--- a/el/about.html
+++ b/el/about.html
@@ -244,9 +244,9 @@
 
     <tr>
 
-      <td>Jean-Christophe Helary</td>
+      <td>Kos Ivantsov</td>
 
-      <td>Υπεύθυνος εντοπίευσης, ιδιοκτήτης ομάδας χρηστών</td>
+      <td>Υπεύθυνος εντοπίευσης</td>
 
     </tr>
 
