--- a/gl/about.html
+++ b/gl/about.html
@@ -252,9 +252,9 @@
 
     <tr>
 
-      <td>Jean-Christophe Helary</td>
+      <td>Kos Ivantsov</td>
 
-      <td>Xestor da localizaci&oacute;n, propietario do grupo de usuarios</td>
+      <td>Xestor da localizaci&oacute;n</td>
 
     </tr>
 
