--- a/id/about.html
+++ b/id/about.html
@@ -245,9 +245,9 @@
 
     <tr>
 
-      <td>Jean-Christophe Helary</td>
+      <td>Kos Ivantsov</td>
 
-      <td>Manajer pelokalan, pemilik grup pengguna</td>
+      <td>Manajer pelokalan</td>
 
     </tr>
 
