--- a/zh_CN/about.html
+++ b/zh_CN/about.html
@@ -254,9 +254,9 @@
 
     <tr>
 
-      <td>Jean-Christophe Helary</td>
+      <td>Kos Ivantsov</td>
 
-      <td>Localization manager, user group owner</td>
+      <td>Localization manager</td>
 
     </tr>
 
