--- a/es/index.html
+++ b/es/index.html
@@ -290,7 +290,7 @@
     <div class="container-fluid versions">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 9</a></span> Versión estándar</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.3 update 2</a></span> Última versión</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.4</a></span> Última versión</li>
       </ul>
     </div>
   </div>
