Update bligner host and French credits

--- a/fr/about.html
+++ b/fr/about.html
@@ -181,7 +181,7 @@
   <ul class="list-unstyled">
     <li>Briac Pilpré</li>
   </ul><h3>Traducteurs de la version française</h3>
-  <ul class="list-unstyled"><li>Briac Pilpré</li></ul></div>
+  <ul class="list-unstyled"><li>Briac Pilpré</li><li>Brigitte Le Grand</li></ul></div>
 
   <h2>Le projet OmegaT</h2>
   <p>Le projet OmegaT existe grâce à un groupe informel et international de bénévoles. Son objectif est de développer, distribuer et promouvoir OmegaT, un logiciel open source de mémoire de traduction.</p>
