--- a/pt_BR/index.html
+++ b/pt_BR/index.html
@@ -290,7 +290,7 @@
     <div class="container-fluid versions">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 10</a></span> Versão estável</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.5</a></span> Última versão</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.5 update 1</a></span> Última versão</li>
       </ul>
     </div>
   </div>
