Fix bugs in the download page

--- a/download.html
+++ b/download.html
@@ -328,7 +328,7 @@ aversion to reading instructions, and your approach to new software is to click
 on every button you see until something resembling the desired effect occurs,
 then OmegaT is probably not suitable for you.</p>
 
-<h3 id="downloads">Standard Version - OmegaT 3.6.0 update 10</h3>
+<h3 id="standard">Standard Version - OmegaT 3.6.0 update 10</h3>
 
 <p>The Standard version requires Java 6. It has usually been in use for some time and is therefore
 proven. Its documentation, at least in English, is usually reasonably up to
