Moved URLs to https://omegat.sourceforge.io/

--- a/fr/download.html
+++ b/fr/download.html
@@ -294,7 +294,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   </tr><tr id="standard_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_webstart"></div></td>
-      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="https://omegat.sourceforge.io/webstart/OmegaT.jnlp" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_source"></div></td>
@@ -350,7 +350,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   </tr><tr id="latest_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="https://omegat.sourceforge.io/webstart-dev/OmegaT.jnlp" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
