--- a/de/contact.html
+++ b/de/contact.html
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/assets/omegat-e188fdec47ad1c200f3c9b5f6c90ea2ec93d891f8000cb2144e95e6f34fd09e4.js" type="text/javascript"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.">
 
   <link rel="canonical" href="http://omegat.org/de/contact">
 
@@ -42,9 +42,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Kontakt und Support - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer." />
   <meta property="og:url"         content="http://omegat.org/de/contact" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Das freie Translation-Memory-Werkzeug" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,7 +55,7 @@
     "name": "",
     "url": "http://omegat.org/de",
     "headline": "Kontakt und Support",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -87,17 +87,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/de/download">Download OmegaT</a></li>
+        <li><a href="/de/download">Download</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/de/resources">Zusätzliche Ressourcen für OmegaT</a></li>
+        <li><a href="/de/resources">Ressourcen</a></li>
         <li><a href="/de/documentation">Dokumentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Sprachen<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -171,65 +171,54 @@
     <div class="jumbotron jumbo-page titles-contact"><h1>Kontakt und Support</h1></div>
         
     <div class="container">
-<h2>Kontakt und Support</h2>
-<h3>Anwendergruppe</h3>
-<p>OmegaT hat eine sehr aktive, unterstützende und mehrsprachige
-<a href="https://groups.yahoo.com/neo/groups/OmegaT/info">Anwendergruppe</a>.
-Es ist sehr sinnvoll, dieser Gruppe beizutreten. Die Anwendergruppe
-dient auch als wichtigster Kontaktpunkt zwischen den Anwendern und
-dem Projektteam.</p>
-<br />
-<h3>Mailinglisten</h3>
-<p>OmegaT bietet folgende Mailinglisten und Trackingsysteme, die
-bei Sourceforge gehostet sind:</p>
-<table>
-<tbody>
-<tr>
-<td><a href=
-"https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a></td>
-<td>Die Mailingliste für OmegaT-Entwickler. Diese Liste dient vor
-allem technischen Diskussionen über Funktionalität und Entwicklung.
-Sie richtet sich an OmegaT-Entwickler und andere
-Interessenten.</td>
-</tr>
-<tr>
-<td><a href=
-"https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a></td>
-<td>Diese Mailingliste richtet sich an Übersetzer/Lokalisierer von
-OmegaT.</td>
-</tr>
-</tbody>
-</table>
-<br />
-<h3>Trackingsysteme</h3>
-<p>Bugs, Funktionalitätsanfragen und Dokumentationsfragen werden
-auf Sourceforge mit den folgenden Trackingsystemen bearbeitet.
-Bitte benutzen Sie diese Trackingsysteme erst, nachdem Sie das
-Thema bereits über die Anwendergruppe bzw. Mailinglisten
-angesprochen haben.</p>
-<table>
-<tbody>
-<tr>
-<td><a href=
-"http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">
-Trackingsystem für Probleme/Bugs</a></td>
-</tr>
-<tr>
-<td><a href=
-"http://sourceforge.net/tracker/?atid=520350&amp;group_id=68187&amp;func=browse">
-Trackingsystem für Funktionalitätsanfragen</a></td>
-</tr>
-<tr>
-<td><a href=
-"http://sourceforge.net/tracker/?atid=912617&amp;group_id=68187&amp;func=browse">
-Trackingsystem für die Dokumentation</a></td>
-</tr>
-</tbody>
-</table>
-<br />
-<h3>Administration</h3>
-<p>Wenden Sie sich bei administrativen Fragen bitte an den <a href=
-"mailto:info@omegat.org">OmegaT-Projektkoordinator</a>.</p>
+  <h3>Benutzergruppe</h3>
+  <p>OmegaT hat <a href="https://groups.yahoo.com/neo/groups/OmegaT/info">hier</a> eine sehr aktive, hilfreiche und vielsprachige Benutzergruppe, Benutzern wird empfholen, dieser beizutreten. Die Benutzergruppe dient auch als Hauptkontaktpunkt zwischen den Benutzern und dem Projektteam.</p>
+  <br/>
+  <h3>Mailinglisten</h3>
+  <p>OmegaT hat auch die folgenden Mailinglisten und Tracker, die bei SourceForge gehostet werden:</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>Die OmegaT-Entwicklerliste. Diese Liste ist für eher technische Diskussionen über Features und Entwicklung und ist für OmegaT-Entwickler und ähnlich Interessierte gedacht. .</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>Diese Mailingliste ist für die Übersetzer von OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Trackingsystem</h3>
+  <p>Fehler, Funktionsanfragen und Angelegenheiten der Dokumentation werden in den folgenden Trackingsystemen behandelt. Bitte benutzen Sie diese Trackingsysteme nicht, bevor Sie diese Angelegenheit in der Benutzergruppe und / oder in den Mailinglisten besprochen haben.</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Probleme / Bugtrackingsystem</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Featureanfragesystem</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Dokumentationssystem</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Administration</h3>
+
+  <p>Bitte kontaktieren Sie den <a href="mailto:info@omegat.org">OmegaT-Projektmanager</a> wegen allem, was hier nicht abgedeckt ist.<br/> Bitte kontaktieren Sie den  <a href="mailto:webmaster@omegat.org">Webmaster</a> wegen allem, das speziell mit der Webseite zu tun hat.</p>
+
 </div>
 
 
@@ -241,7 +230,7 @@ Trackingsystem für die Dokumentation</a></td>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Verbinden</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -257,15 +246,15 @@ Trackingsystem für die Dokumentation</a></td>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Handbuch</a></li>
             <li><a href="/de/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Reviews von OmegaT</a></a></li>
+            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Bewertungen</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Das OmegaT-Projekt</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -273,10 +262,10 @@ Trackingsystem für die Dokumentation</a></td>
             <a href="/de/contact"><span class="glyphicon glyphicon-envelope"></span> Kontakt und Support</a>
             </li>
             <li>
-            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über uns</a>
+            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über</a>
             </li>
             <li>
-            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
             </li>
           </ul>
         </div>
