--- a/de/howtos/ms_translator.html
+++ b/de/howtos/ms_translator.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Using Microsoft Translator in OmegaT - OmegaT</title>
+  <title>HowTo - Microsoft Translator in OmegaT benutzen - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/assets/omegat-e188fdec47ad1c200f3c9b5f6c90ea2ec93d891f8000cb2144e95e6f34fd09e4.js" type="text/javascript"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.">
 
   <link rel="canonical" href="http://omegat.org/de/howtos/ms_translator">
 
@@ -41,10 +41,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Using Microsoft Translator in OmegaT - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="HowTo - Microsoft Translator in OmegaT benutzen - OmegaT" />
+  <meta property="og:description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer." />
   <meta property="og:url"         content="http://omegat.org/de/howtos/ms_translator" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Das freie Translation-Memory-Werkzeug" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -54,8 +54,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/de",
-    "headline": "Howto - Using Microsoft Translator in OmegaT",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "HowTo - Microsoft Translator in OmegaT benutzen",
+    "description": "OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -87,17 +87,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/de/download">Download OmegaT</a></li>
+        <li><a href="/de/download">Download</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/de/resources">Zusätzliche Ressourcen für OmegaT</a></li>
+        <li><a href="/de/resources">Ressourcen</a></li>
         <li><a href="/de/documentation">Dokumentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Sprachen<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -168,111 +168,70 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-ms_translator"><h1>Howto - Using Microsoft Translator in OmegaT</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-ms_translator"><h1>HowTo - Microsoft Translator in OmegaT benutzen</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div><div class="container">
-- By using Microsoft Translator API, you can utilize Microsoft Translator machine translation in the Machine Translation window of OmegaT.<br />
-- To use Microsoft Translator API, you need to register your Application in Microsoft Azure Marketplace. OmegaT uses "Client ID" and "Client secret" information of which you registered.<br />
-
-<h3>Subscription</h3>
-<br />
-<a href="https://datamarket.azure.com/dataset/bing/microsofttranslator">https://datamarket.azure.com/dataset/bing/microsofttranslator</a>
-<br />
-<br />
-- Access the above website and [Sign in] to Microsoft Azure Marketplace.<br />
-<br />
-*If you do not already have an Microsoft account, you will need to register one first.<br />
-<br />
-- After signing in Microsoft Azure Marketplace, you can get subscription to use Microsoft Translator.<br />
-- You may pick from any of the available subscription offers, shown in the right area of the page. If you want to select Basic subscription (free, up to 2 million characters a month,) click [SIGN UP] at the top of the subscription list.<br />
-
-<h3>Register your application</h3>
-<br />
-- Click [My Account] on the top of the page.<br />
-- Click [DEVELOPERS] in the left "my account" menu.<br />
-<br />
-<a href="https://datamarket.azure.com/developer/applications">https://datamarket.azure.com/developer/applications</a>
-<br />
-<br />
-- Click [REGISTER] shown below "Registered Applications."<br />
-- Register an application with the following infomation:<br />
-&nbsp;&nbsp; - Client ID: Any string ex.) my_clientid1<br />
-&nbsp;&nbsp; - Name: Any string ex.) my_application01<br />
-&nbsp;&nbsp; - Client secret: Use string displayed by default<br />
-&nbsp;&nbsp; - Redirect URI: Any URI (Invalid URL required when using Microsoft Translator) ex.) http://dummy/<br />
-- After registering, check if your application has been displayed on the "Registered Applications" in the page.<br />
-<br />
-<a href="https://datamarket.azure.com/developer/applications">https://datamarket.azure.com/developer/applications</a>
-<br />
-<br />
-
-<h3>OmegaT setting</h3>
-<br />
-- OmegaT uses "Client ID" and "Client secret" information of which you registered.<br />
-
-<h4>Windows users:</h4>
-- Locate the file OmegaT.l4J.ini (in the OmegaT program folder) and edit the following lines with your preferred plain-text editor:<br />
-<br />
-- Before editing OmegaT.l4J.ini<br />
-<pre>
-# Microsoft Translator credentials
-#-Dmicrosoft.api.client_id=xxxxx
-#-Dmicrosoft.api.client_secret=xxxxx
-</pre>
-- After editing OmegaT.l4J.ini (where Client ID: my_clientid1)<br />
-- Remove "#" at the line heads, and replace "xxxxx" with your "Client ID" and "Client secret."<br />
-<pre>
-# Microsoft Translator credentials
--Dmicrosoft.api.client_id=my_clientid1
--Dmicrosoft.api.client_secret=your Client secret
-</pre>
-- Save OmegaT.l4J.ini.<br />
-<br />
-<h4>Mac users:</h4>
-- Right-click on OmegaT.app and select "Show Package Contents."<br />
-- Find the file OmegaT.app/Contents/MacOS/OmegaT.sh and edit the following lines with your preferred plain-text editor:<br />
-<br />
-- Before editing OmegaT.sh<br />
-<pre>
-# Microsoft Translator credentials
-#MS_CLIENT_ID="-Dmicrosoft.api.client_id=xxxxx"
-#MS_CLIENT_SECRET="-Dmicrosoft.api.client_secret=xxxxx"
-</pre>
-- After editing OmegaT.sh (where Client ID: my_clientid1)<br />
-- Remove "#" at the line heads, and replace "xxxxx" with your "Client ID" and "Client secret."<br />
-<pre>
-# Microsoft Translator credentials
-MS_CLIENT_ID="-Dmicrosoft.api.client_id=my_clientid1"
-MS_CLIENT_SECRET="-Dmicrosoft.api.client_secret=your Client secret"
-</pre>
-- Save OmegaT.sh.<br />
-<br />
-<h4>Linux users:</h4>
-- Add the following options to launch OmegaT (where Client ID: my_clientid1)<br />
-<pre>
-java -jar -Dmicrosoft.api.client_id=my_clientid1 -Dmicrosoft.api.client_secret=your Client secret OmegaT.jar
-</pre>
-
-
-<h3>Using Microsoft Translator machine translation in OmegaT</h3>
-<br />
-- Launch OmegaT and open your project.<br />
-- Select [Options] > [Machine Translate]<br />
-- Check [Microsoft Translator]<br />
-- When you select any segments, its translation will be displayed in Machine Translation window of OmegaT.<br />
-&nbsp;&nbsp; - If you find a message including "Bad Request" in Machine Translation window, check if the values "Client ID" and "Client secret" are appropriate.<br />
-- Ctrl+M (or Command+M on Mac) will replace the current segment translation with that machine translation.<br />
-
-<h3>How will I know when I reach my monthly usage limit?</h3>
-<br />
-<a href="https://datamarket.azure.com/account/datasets">https://datamarket.azure.com/account/datasets</a>
-<br />
-<br />
-- You can check your usage limit in your account by accessing the above page. The "Status" field displays the limit like as "1,998,890 Characters remaining" for example.<br />
-<br />
-Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
-
-</div>
+    <div class="container">
+- Mithilfe der Microsoft Translator-API können Sie die maschinelle Übersetzung von Microsoft Translator im Fenster Maschinelle Übersetzung von OmegaT verwenden.<br /> - Um die Microsoft Translator-API zu verwenden, müssen Sie Ihre Anwendung in Microsoft Azure Marketplace registrieren. OmegaT verwendet die Informationen "Client ID" und "Client secret", mit denen Sie sich registriert haben.<br />
+
+<h3>Abonnement (zur Zeit nicht möglich)</h3>
+<br />
+<a href="https://datamarket.azure.com/dataset/bing/microsofttranslator">https://azure.microsoft.com/de-de/services/cognitive-services/translator-text-api/</a> <br /> <br />  Greifen Sie auf die oben genannte Website zu und melden Sie sich bei Microsoft Azure Marketplace an*.<br /> <br /> *Wenn Sie noch kein Microsoft-Konto haben, müssen Sie zuerst eines registrieren.<br /> <br /> - Nachdem Sie sich bei Microsoft Azure Marketplace angemeldet haben, können Sie ein Abonnement für die Verwendung von Microsoft Translator erhalten. - Sie können aus einem der verfügbaren Abonnement-Angebote auswählen, die im rechten Bereich der Seite angezeigt werden. Wenn Sie das Basis-Abonnement (kostenlos, bis zu 2 Millionen Zeichen pro Monat) auswählen möchten, klicken Sie oben in der Abonnementliste auf [ANMELDEN].<br />
+
+<h3>Registrieren Sie Ihre Anwendung</h3>
+<br />
+- Klicken Sie oben auf der Seite auf [Mein Konto].<br /> - Klicken Sie im linken Menü "Mein Konto" auf [ENTWICKLER].<br /> <br />  <br /> - Klicken Sie unten "Anwendung registrieren."<br /> - Registrieren Sie eine Anwendung mit den folgenden Informationen:<br /> &nbsp;&nbsp; - Client ID: irgendeine Zeichenfolge, z. B. meine_clientid1<br /> &nbsp;&nbsp; - Name: irgendeine Zeichenfolge, z. B. meine_anwendung01<br /> &nbsp;&nbsp; - Client-Passwort: Verwenden Sie die standardmäßig angezeigte Zeichenfolge<br /> &nbsp;&nbsp; - Redirect URI / Umleitungs-URI: Irgendeine URI (Wenn Sie Microsoft Translator benutzen, ist eine UNGÜLTIGE URI erforderlich.), z. B. http://dummy/<br /> - Prüfen Sie nach der Registrierung, ob Ihre Anwendung auf der Seite "Registrierte Anwendungen" angezeigt wird.<br /> <br /> 
+<br />
+
+<h3>OmegaT-Einstellung</h3>
+<br />
+- OmegaT benutzt "Client ID"- und "Client secret"-Information, welche Sie registriert haben.<br />
+
+<h4>Windows Benutzer</h4>
+- Finden Sie die Datei OmegaT.l4J.ini (im OmegaT-Programmordner) und bearbeiten Sie die folgenden Zeilen mit Ihrem bevorzugten reinen Texteditor:<br /> <br /> - Vor dem Bearbeiten der OmegaT.l4J.ini<br />
+<pre>
+# Microsoft Translator credentials
+#-Dmicrosoft.api.client_id=xxxxx
+#-Dmicrosoft.api.client_secret=xxxxx
+</pre>
+- Nach dem Bearbeien der OmegaT.l4J.ini (Client ID: my_clientid1)<br /> - Entfernen Sie "#" am Zeilenanfang und ersetzen Sie "xxxxx" mit Ihrer "Client ID" und Ihrem "Client-Passwort."<br />
+<pre>
+# Microsoft Translator credentials
+-Dmicrosoft.api.client_id=my_clientid1
+-Dmicrosoft.api.client_secret=your Client secret
+</pre>
+- Speichern Sie die OmegaT.l4J.ini.<br />
+<br />
+<h4>Mac-Benutzer:</h4>
+Klicken Sie mit der rechten Maustaste auf OmegaT.app und wählen Sie "Paketinhalt anzeigen".<br /> - Finden Sie die Datei OmegaT.app/Contents/MacOS/OmegaT.sh und bearbeiten Sie die folgenden Zeilen mit Ihrem bevorzugten reinen Texteditor:<br /> <br /> - Vor dem Bearbeiten von OmegaT.sh<br />
+<pre>
+# Microsoft Translator credentials
+#MS_CLIENT_ID="-Dmicrosoft.api.client_id=xxxxx"
+#MS_CLIENT_SECRET="-Dmicrosoft.api.client_secret=xxxxx"
+</pre>
+- Nach dem Bearbeien von OmegaT.sh (Client ID: my_clientid1)<br /> - Entfernen Sie "#" am Zeilenanfang und ersetzen Sie "xxxxx" mit Ihrer "Client ID" und Ihrem "Client-Passwort."<br />
+<pre>
+# Microsoft Translator credentials
+MS_CLIENT_ID="-Dmicrosoft.api.client_id=my_clientid1"
+MS_CLIENT_SECRET="-Dmicrosoft.api.client_secret=your Client secret"
+</pre>
+Speichern Sie OmegaT.sh.<br />
+<br />
+<h4>Linux-Benutzer:</h4>
+- Fügen Sie die folgenden Optionen zu, um OmegaT zu starten (Client ID: my_clientid1)<br />
+<pre>
+java -jar -Dmicrosoft.api.client_id=my_clientid1 -Dmicrosoft.api.client_secret=ihr Client-Passwort OmegaT.jar
+</pre>
+
+
+<h3>Maschinelle Übersetzung Microsoft Translator in OmegaT benutzen</h3>
+<br />
+- Starten Sie OmegaT und öffnen Sie Ihr Projekt<br /> - Wählen SIe [Optionen] &gt; [Maschinelle Übersetzung]<br /> - Aktivieren SIe [Microsoft Translator]<br /> - Wenn Sie ein Segment auswählen, wird seine Übersetzung im Fenster Maschinelle Übersetzung von OmegaT angezeigt.<br /> &nbsp;&nbsp; - Wenn Sie eine Meldung mit dem Inhalt "Ungültige Anfrage" erhalten, prüfen Sie, ob die Werte "Client ID" und "Client Secret" stimmen.<br /> - Strg + M (oder Command+M auf dem Mac) ersetzt die aktuelle Segmentübersetzung mit der Maschinellen Übersetzung.<br />
+
+<h3>Woher weiß ich, wann ich mein monatliches Nutzungslimit erreiche?</h3>
+<br />
+<a href="https://datamarket.azure.com/account/datasets">https://datamarket.azure.com/account/datasets</a> <br /> <br /> - Wenn Sie die oben genannte Seite aufrufen, können Sie Ihr Nutzungslimit in Ihrem Konto überprüfen. Das Stausfeld zeigt das Limit an, wie zum Beispiel "1.998.890 Zeichen verbleiben".<br /> <br /> Copyright Will Helton und OmegaT Japanese Localization Team 2012-2015<br />
+
+</div>
 
 
 
@@ -283,7 +242,7 @@ Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Verbinden</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -299,15 +258,15 @@ Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Handbuch</a></li>
             <li><a href="/de/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Reviews von OmegaT</a></a></li>
+            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Bewertungen</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Das OmegaT-Projekt</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -315,10 +274,10 @@ Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
             <a href="/de/contact"><span class="glyphicon glyphicon-envelope"></span> Kontakt und Support</a>
             </li>
             <li>
-            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über uns</a>
+            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über</a>
             </li>
             <li>
-            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
             </li>
           </ul>
         </div>
