--- a/de/howtos/prop12m.html
+++ b/de/howtos/prop12m.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Propagation and one-to-many matching HowTo - OmegaT</title>
+  <title>HowTo - Propagierung und Eins-zu-viele-Abgleich - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/assets/omegat-e188fdec47ad1c200f3c9b5f6c90ea2ec93d891f8000cb2144e95e6f34fd09e4.js" type="text/javascript"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.">
 
   <link rel="canonical" href="http://omegat.org/de/howtos/prop12m">
 
@@ -41,10 +41,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Propagation and one-to-many matching HowTo - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="HowTo - Propagierung und Eins-zu-viele-Abgleich - OmegaT" />
+  <meta property="og:description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer." />
   <meta property="og:url"         content="http://omegat.org/de/howtos/prop12m" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Das freie Translation-Memory-Werkzeug" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -54,8 +54,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/de",
-    "headline": "Propagation and one-to-many matching HowTo",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "HowTo - Propagierung und Eins-zu-viele-Abgleich",
+    "description": "OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -87,17 +87,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/de/download">Download OmegaT</a></li>
+        <li><a href="/de/download">Download</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/de/resources">Zusätzliche Ressourcen für OmegaT</a></li>
+        <li><a href="/de/resources">Ressourcen</a></li>
         <li><a href="/de/documentation">Dokumentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Sprachen<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -168,63 +168,64 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-prop12m"><h1>Propagation and one-to-many matching HowTo</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-prop12m"><h1>HowTo - Propagierung und Eins-zu-viele-Abgleich</h1></div>
         
     <div class="container">
 
-<h2>Propagation and one-to-many matching HowTo</h2>
 
-<h3>Introduction</h3>
+<h3>Einleitung</h3>
 
-<p>This HowTo describes OmegaT's functions for automatic match propagation and one-to-many matching.</p>
+<p>Dieses HowTo beschreibt OmegaTs automatische Match-Propagierung und Eins-zu-viele-Abgleichsfunktionen.</p>
 
-<h3>Propagation</h3>
+<h3>Propagierung</h3>
 
-<p>By default, OmegaT uses automatic match propagation. This means that as soon as a segment is translated, the same translation is automatically inserted into all identical segments. If a segment has already been translated and an identical segment later on in the text is then changed, the earlier segment will be brought into line with the changed segment. Segments which occur more than once are described in OmegaT as "non-unique segments".</p>
+<p>Standardmäßig verwendet OmegaT automatische Match-Propagierung. Das bedeutet, dass, sobald ein Segment übersetzt ist, die gleiche Übersetzung automatisch in alle identischen Segmente eingefügt wird. Wenn ein Segment bereits übersetzt wurde und später ein identisches Segment im Text geändert wird, wird das frühere Segment an das geänderte Segment angepasst. Segmente, die mehr als einmal vorkommen, werden in OmegaT als "nicht einmalige Segmente" beschrieben.</p>
 
-<p>Selecting View > Mark Non-Unique Segments causes only the first instance of a non-unique segment to be displayed in black, and second and subsequent instances to be displayed in grey. This is useful when a translation is being checked, since only the first instance of identical segments may need to be checked. The user can therefore see immediately that a segment in grey, rather than black, has already been checked. (If Options > View > "Include the first non-unique segment when marking non-unique segments" is selected, all non-unique segments including the first are marked in this way.)</p>
+<p>Wenn Sie Ansicht &gt; Nicht einmalige Segmente markieren auswählen, wird nur die erste Instanz eines nicht einmaligen Segments in Schwarz angezeigt und zweite und nachfolgende Instanzen werden in Grau angezeigt. Dies ist nützlich, wenn eine Übersetzung geprüft wird, da möglicherweise nur die erste Instanz identischer Segmente überprüft werden muss. Der Benutzer kann daher sofort sehen, dass ein Segment in Grau statt in Schwarz bereits überprüft wurde. (Wenn Optionen &gt; Ansicht &gt; "Das erste nicht einmalige Segment beim Markieren nicht einmaliger Segmente einschließen" ausgewählt ist, werden alle nicht einmaligen Segmente einschließlich des ersten auf diese Weise markiert.)</p>
 
+<p>Sie können die Funktion Autoprogagierung unter Projekt &gt; Eigenschaften &gt; Automatische Weitergabe von Übersetzungen deaktivieren. Dies hat zur Folge, dass alle Instanzen von nicht einmaligen Segmenten zu alternativen Übersetzungen werden (siehe "Eins-zu-viele-Abgleich" unten).</p>
 
-<h3>One-to-many matching (version 2.5.0 onwards)</h3>
+<h3>Eins-zu-viele-Abgleich</h3>
 
-<p>In most cases, the translator will wish to translate identical segments within a project in the same way. For cases where two or more identical segments require different translations, OmegaT offers "one-to-many matching".</p>
+<p>In den meisten Fällen möchte der Übersetzer identische Segmente innerhalb eines Projekts gleich übersetzen. In Fällen, bei denen zwei oder mehr Segmente unterschiedliche Übersetzungen erfordern, bietet OmegaT "Eins-zu-viele-Abgleich".</p>
 
-<p>OmegaT's one-to-many matching function first assumes that identical segments are to be translated in the same way. This translation is described as the "default translation". To produce a translation that is different from the "default translation", right-click with the mouse within the segment and select "Create Alternative Translation". This segment can be now translated as desired without other instances of it automatically being made identical to it.</p>
+<p>OmegaTs Funktion Eins-zu-viele-Abgleich nimmt zuerst an, dass identische Segmente gleich übersetzt werden sollen. Diese Übersetzung wird "Standardübersetzung" genannt. Um eine Übersetzung zu erstellen, die anders ist als die Standardübersetzung, klicken Sie mit der rechten Maustaste innerhalb des Segments und wählen Sie "Alternative Übersetzung".  Dieses Segment kann jetzt wie gewünscht übersetzt werden, ohne dass andere Instanzen automatisch damit identisch gemacht werden.</p>
 
-<p>You can have as many "alternative translations" as you like of identical segments, but there can only be one default translation (or none at all).</p>
+<p>Sie können so viele "alternative Übersetzungen" von identischen Segmenten haben, wie Sie möchten, aber es kann nur eine Standardübersetzung geben (oder keine).</p>
 
-<p>To make an alternative translation the default translation, right-click with the mouse and select "Use as Default Translation". This will make the current translation the default translation. All other instances of the same segment that were previously the "default translation" will now be brought into line with this translation.</p>
+<p>Um eine alternative Übersetzung zur Standardübersetzung zu machen, klicken Sie mit der rechten Maustaste und wählen Sie "Als Standardübersetzung verwenden". Das macht die aktuelle Übersetzung zur Standardübersetzung. Alle anderen Instanzen desselben Segments, die zuvor die "Standard-Übersetzung" waren, werden jetzt mit dieser Übersetzung in Übereinstimmung gebracht.</p>
 
-<p>To remove the "alternative translation" status of a single segment and bring it back into line with the "default translation", simply delete the content of the segment. This has the effect of deleting the "alternative translation" status at the same time; the translation of the segment will therefore revert to that of the default translation. The content of a segment can be deleted completely either by means of the keyboard shortcuts Ctrl+A > Ctrl+X > Enter, by right-clicking with the mouse and the Remove Translation menu item, or simply by using the delete key (repeatedly).</p>
+<p>Wenn Sie eine Instanz eines nicht einmaligen Segments bereits übersetzt haben und eine andere Instanz des nicht einmaligen Segments zur Standardübersetzung machen möchten, ohne die Übersetzung der bereits übersetzten Instanz zu ändern, müssen Sie zunächst den Status des Segments, das Sie schon übersetzt haben, zur alternativen Übersetzung machen (Rechtsklick mit der Maus, "Alternative Übersetzung".</p>
 
-
-<h3>Summary of propagation and one-to-many matching commands</h3>
-
-<p><b>None</b> (default behaviour): all identical segments are automatically translated the same way.</p>
-
-<p><b>Mark Non-Unique Segments</b>: identical segments are marked in grey (changes the display, but not the behaviour).</p>
-
-<p><b>Create Alternative Translation</b>: makes the segment unique. Changes to this segment have no effect upon other segments, nor do changes to the "default translation" affect it.</p>
-
-<p><b>Remove Translation</b>: deletes the content of the segment, causing (when Enter is pressed) the default translation to be inserted.</p>
-
-<p><b>Use as Default Translation</b>: causes the active segment to be made the default translation and therefore all previous "default translation" segments to be brought into line with it.</p>
+<p>Um den Status "alternative Übersetzung" eines einzelnen Segments zu entfernen und an die "Standardübersetzung" anzupassen, löschen Sie einfach den Inhalt des Segments. Dies hat zur Folge, dass gleichzeitig der Status "alternative Übersetzung" gelöscht wird; Die Übersetzung des Segments wird daher zu der der Standardübersetzung zurückgesetzt. Der Inhalt eines Segments kann entweder mit den Tastenkombinationen Strg + A &gt; Strg + X &gt; Enter, mit der rechten Maustaste und dem Menübefehl Übersetzung löschen entfernt werden oder einfach mit der Löschtaste (wiederholt).</p>
 
 
+<h3>Zusammenfassung der Kommandos zur Propagation und zum Eins-zu-viele-Abgleich</h3>
 
-<h3>Points to note</h3>
+<p><b>Keine</b> (Standardverhalten): Alle identischen Segmente werden automatisch gleich übersetzt.</p>
 
-<p>For some file types, OmegaT uses the preceding and following segments to make segments unique. Creating an "alternative translation" therefore relies upon identical segments having different preceding and following segments. Where two segments also have identical preceding and following segments (for example when an entire page appears twice in the text), they cannot be translated differently from each other in OmegaT, i.e. it is not possible to make one of them an "alternative translation".</p>
+<p><b>Markiere nicht-einmalige Segmente</b>: Identische Segmente werden grau markiert (ändert die Anzeige, aber nicht das Verhalten).</p>
 
-<p>"Non-unique segment" covers both default and alternative translations. Consequently, segments that are marked (with the grey font) as being non-unique are marked as non-unique irrespective of whether alternative translations have been created or not.</p>
+<p><b>Alternative Übersetzung</b>: Macht das Segment einmalig. Änderungen an diesem Segment haben keine Auswirkungen auf andere Segmente, noch haben Änderungen an der "Standardübersetzung" Auswirkungen auf das Segment.</p>
 
-<p>By default, the Go To Next Untranslated Segment command (Ctrl+U) skips to the next untranslated segment, skipping propagated translations in the process. If Options > Editing Behaviour > "Go To Next Untranslated Segment stops when there is at least one alternative translation" is selected however and at least one alternative translation of a non-unique segment has been created, this function treats all instances of that segment (whether default or alternative translations) as untranslated, i.e. does not skip them.</p>
+<p><b>Übersetzung löschen</b>: Löscht den Inhalt des Segments und bewirkt, dass (wenn Enter gedrückt wird) die Standard-Übersetzung eingefügt wird.</p>
+
+<p><b>Als Standardübersetzung verwenden</b>: Bewirkt, dass das aktive Segment zur Standardübersetzung wird und daher alle vorherigen "Standardübersetzungs"-Segmente damit in Einklang gebracht werden.</p>
 
 
-<p>Copyright Marc Prior 2012</p>
+
+<h3>Zu beachtende Punkte:</h3>
+
+<p>Bei einigen Dateitypen unterscheidet OmegaT zwischen identischen Segmenten, indem es sich auf seine vorhergehenden und folgenden Segmente bezieht. Das Erstellen einer "alternativen Übersetzung" hängt daher von identischen Segmenten mit unterschiedlichen vorhergehenden oder folgenden Segmenten ab. Wenn zwei Segmente auch identische vorangehende und folgende Segmente haben (zum Beispiel wenn eine ganze Seite zweimal im Text erscheint), können sie in OmegaT nicht unterschiedlich voneinander übersetzt werden, d. h. es ist nicht möglich, eine von ihnen zu einer "alternativen Übersetzung" zu machen .</p>
+
+<p>"Nicht einmaliges Segment" umfasst sowohl Standard- als auch alternative Übersetzungen. Folglich werden Segmente, die (mit der grauen Schrift) als nicht einmalig markiert sind, als nicht einmalig behandelt, unabhängig davon, ob alternative Übersetzungen erstellt wurden oder nicht.</p>
+
+<p>Der Befehl Gehe zum nächsten nicht übersetzten Segment (Strg + U) springt standardmäßig zum nächsten nicht übersetzten Segment und überspringt dabei die übertragenen Übersetzungen. Wenn Optionen &gt; Editierverhalten &gt; "Der Befehl Gehe zum nächsten nicht übersetzten Segment wird nicht weiter ausgeführt, wenn mindestens eine alternative Übersetzung vorliegt" ausgewählt ist und mindestens eine alternative Übersetzung eines nicht einmaligen Segments erstellt wurde, behandelt diese Funktion alle Instanzen dieses Segments (ob Standard oder alternative Übersetzungen) als nicht übersetzt, d. h. überspringt sie nicht.</p>
+
+
+<p>Copyright Marc Prior 2014</p>
 
 </div>
-
 
 
 
@@ -235,7 +236,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Verbinden</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -251,15 +252,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Handbuch</a></li>
             <li><a href="/de/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Reviews von OmegaT</a></a></li>
+            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Bewertungen</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Das OmegaT-Projekt</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -267,10 +268,10 @@
             <a href="/de/contact"><span class="glyphicon glyphicon-envelope"></span> Kontakt und Support</a>
             </li>
             <li>
-            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über uns</a>
+            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über</a>
             </li>
             <li>
-            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
             </li>
           </ul>
         </div>
