--- a/de/sponsorship.html
+++ b/de/sponsorship.html
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/assets/omegat-e188fdec47ad1c200f3c9b5f6c90ea2ec93d891f8000cb2144e95e6f34fd09e4.js" type="text/javascript"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.">
 
   <link rel="canonical" href="http://omegat.org/de/sponsorship">
 
@@ -42,9 +42,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Sponsoring - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer." />
   <meta property="og:url"         content="http://omegat.org/de/sponsorship" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Das freie Translation-Memory-Werkzeug" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,7 +55,7 @@
     "name": "",
     "url": "http://omegat.org/de",
     "headline": "Sponsoring",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT ist eine freie, in Java geschriebene OpenSource Translation Memory-Anwendung für professionelle Übersetzer.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -87,17 +87,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/de/download">Download OmegaT</a></li>
+        <li><a href="/de/download">Download</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/de/resources">Zusätzliche Ressourcen für OmegaT</a></li>
+        <li><a href="/de/resources">Ressourcen</a></li>
         <li><a href="/de/documentation">Dokumentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Sprachen<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -171,17 +171,66 @@
     <div class="jumbotron jumbo-page titles-sponsorship"><h1>Sponsoring</h1></div>
         
     <div class="container">
-<h2>Sponsoring</h2>
-<p>Der Großteil der Arbeit im OmegaT-Projekt wurde auf Basis
-freiwilliger Mitarbeit ausgeführt. Dennoch wurden bestimmte
-Funktionalitäten des Programms von kommerziellen Sponsoren in
-Auftrag gegeben, die diese dann wiederum der OmegaT-Gemeinde
-gespendet haben. Bis heute sind diese Sponsoren:</p>
-<p><a href="http://www.balabit.com/">Balabit</a></p>
-<p><a href="http://www.doublet.jp/">Doublet KK</a></p>
-<p><a href="http://www.ill.eu/">Institut Laue-Langevin</a></p>
-<p><a href="http://www.invantive.com">Invantive</a></p>
-<p><a href="http://www.marcprior.de/">Marc Prior</a></p>
+  <h2>Sponsoring</h2>
+  <p>Die überwiegende Mehrheit der Arbeit am OmegaT-Projekt wurde auf freiwilliger Basis abgeschlossen. Bestimmte Programmfunktionen wurden jedoch von kommerziellen Sponsoren in Auftrag gegeben, die die Funktionen dann der Gemeinschaft zurückgaben. Bis heute sind diese Sponsoren:</p>
+  <ul>
+    <li>
+      <a href="http://www.balabit.com/">Balabit</a>
+    </li>
+    <li>
+      <a href="http://www.capstan.be/">cApStAn</a>
+    </li>
+    <li>
+      <a href="http://www.cjtranslations.com/">CJ Translations</a>
+    </li>
+    <li>
+      <a href="http://www.commodity12.eu/">Commodity12</a>
+    </li>
+    <li>
+      <a href="https://diegomerinotraducciones.com/proyectos/">Diego Merino Traducciones</a>
+    </li><li>
+      <a href="http://www.diptik.fr/">Diptik</a>
+    </li>
+    <li>
+      <a href="http://www.doublet.jp/">Doublet KK</a>
+    </li>
+    <li>
+      <a href="http://www.e-lexica.com/">e-lexica</a>
+    </li>
+    <li>
+      <a href="http://www.genua.de/">Genua</a>
+    </li>
+    <li>
+      <a href="http://www.tradumatica.net/">Grup de Recerca Tradumàtica</a>
+    </li>
+    <li>
+      <a href="http://www.ill.eu/">Institut Laue-Langevin</a>
+    </li>
+    <li>
+      <a href="http://www.invantive.com">Invantive</a>
+    </li>
+    <li>
+      <a href="http://www.japanese-translations.co.uk/">Julian Rippon</a>
+    </li>
+    <li>
+      <a href="http://kilgray.com/">Kilgray</a>
+    </li>
+    <li>
+      <a href="http://www.portavita.eu/">Portavita</a>
+    </li>
+    <li>
+      <a href="http://www.marcprior.de/">Marc Prior</a>
+    </li>
+    <li>
+      <a href="http://www.qabiria.com/">Qabiria</a>
+    </li>
+    <li>
+      <a href="http://www.velior.ru/en">Velior</a>
+    </li>
+    <li>
+      <a href="http://www.welocalize.com/">weLocalize</a>
+    </li>
+  </ul>
 </div>
 
 
@@ -193,7 +242,7 @@ gespendet haben. Bis heute sind diese Sponsoren:</p>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Verbinden</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -209,15 +258,15 @@ gespendet haben. Bis heute sind diese Sponsoren:</p>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+            <li><a href="/de/documentation#manual"><span class="glyphicon glyphicon-book"></span> Handbuch</a></li>
             <li><a href="/de/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Reviews von OmegaT</a></a></li>
+            <li><a href="/de/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/de/reviews"><span class="glyphicon glyphicon-heart"></span> Bewertungen</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Das OmegaT-Projekt</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -225,10 +274,10 @@ gespendet haben. Bis heute sind diese Sponsoren:</p>
             <a href="/de/contact"><span class="glyphicon glyphicon-envelope"></span> Kontakt und Support</a>
             </li>
             <li>
-            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über uns</a>
+            <a href="/de/about"><span class="glyphicon glyphicon-question-sign"></span> Über</a>
             </li>
             <li>
-            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/de/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
             </li>
           </ul>
         </div>
