--- a/fr/download.html
+++ b/fr/download.html
@@ -378,7 +378,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   </tr>
   <tr>
       <td>Nightly Builds</td>
-      <td><span rel="popover" data-platform="nightly" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><td><a class="btn btn-primary" href="https://omegat.ci.cloudbees.com/job/omegat-trunk/" role="button">Télécharger</a></td>
+      <td><span rel="popover" data-platform="nightly" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><td><a class="btn btn-primary" href="https://sourceforge.net/projects/omegat/files/Nightly/" role="button">Télécharger</a></td>
   </tr>
   </tbody>
 </table>
