--- a/en/download.html
+++ b/en/download.html
@@ -641,7 +641,7 @@ development. Pre-built binaries, are available as Nightly Builds.</p>
   <tr>
       <td>Nightly Builds</td>
       <td><span rel="popover" data-platform="nightly" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
-      <td><a class="btn btn-primary" href="https://omegat.ci.cloudbees.com/job/omegat-trunk/" role="button">Download</a></td>
+      <td><a class="btn btn-primary" href="https://sourceforge.net/projects/omegat/files/Nightly/" role="button">Download</a></td>
   </tr>
   </tbody>
 </table>
