--- a/it/download.html
+++ b/it/download.html
@@ -701,7 +701,7 @@ href="#download-wizard" data-toggle="collapse">Selettore di scaricamento</a>.</p
   <tr>
       <td>Nightly Builds</td>
       <td><!----><span rel="popover" data-platform="nightly" data-content="" class="glyphicon glyphicon-info-sign"></span>
-      </td><td><a class="btn btn-primary" href="https://omegat.ci.cloudbees.com/job/omegat-trunk/" role="button">Scarica</a></td>
+      </td><td><a class="btn btn-primary" href="https://sourceforge.net/projects/omegat/files/Nightly/" role="button">Scarica</a></td>
   </tr>
   </tbody>
 </table>
