--- a/nl/download.html
+++ b/nl/download.html
@@ -741,7 +741,7 @@ href="#download-wizard" data-toggle="collapse">Download selecteren</a> gebruiken
   <tr>
       <td>Nightly Builds</td>
       <td><!----><span rel="popover" data-platform="nightly" data-content="" class="glyphicon glyphicon-info-sign"></span>
-      </td><td><a class="btn btn-primary" href="https://omegat.ci.cloudbees.com/job/omegat-trunk/" role="button">Downloaden</a></td>
+      </td><td><a class="btn btn-primary" href="https://sourceforge.net/projects/omegat/files/Nightly/" role="button">Downloaden</a></td>
   </tr>
   </tbody>
 </table>
