--- a/de/index.html
+++ b/de/index.html
@@ -291,7 +291,7 @@
     <div class="container-fluid versions">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 11</a></span> Standard Version</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.5 update 4</a></span> Neueste Version</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.2.0</a></span> Neueste Version</li>
       </ul>
     </div>
   </div>
